fixed alignment issues

--- a/src/components/Gallery/index.css
+++ b/src/components/Gallery/index.css
@@ -5,6 +5,7 @@ ul {
   align-items: center;
   flex-wrap: wrap;
   padding: 0px;
+  margin: 0px;
 }
 
 .main {
@@ -19,11 +20,23 @@ ul {
   height: 450px;
 }
 
+* {
+  font-family: roboto;
+}
+
+.head {
+  color: #1e293b;
+}
+
 .inner-main {
   width: 93%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.para {
+  color: #64748b;
 }
 
 @media screen and (max-width: 767px) {
