--- a/src/components/ThumbnailItem/index.css
+++ b/src/components/ThumbnailItem/index.css
@@ -4,14 +4,20 @@
 
 li {
   margin: 0px 15px 0px 0px;
+  padding: 0px;
 }
 
 .normal {
   opacity: 0.5;
 }
 
+.common {
+  height: 100%;
+  width: 100%;
+}
+
 button {
   border: 0px solid;
-  border-color: transparent;
   background-color: transparent;
+  padding: 0px;
 }
